--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 .invisible {
     display: none;
 }
+
+.shopping-list-items {
+    cursor: pointer;
+}
+
+.done {
+    text-decoration: line-through;
+    color: #d50000;
+}
